bugfix: dodanie z-index aby lista rozwijalna nie byla ukrywana pod innymi elementami

--- a/resources/sass/layout/_header.scss
+++ b/resources/sass/layout/_header.scss
@@ -115,7 +115,7 @@ body.padding-top {
   left: 0;
   top: -1px;
   margin-top: 32px;
-  z-index: 1;
+  z-index: 100;
 
   .item-options {
     position: absolute;
